seed & get events

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <a href="#">Sport</a>
             </li>
             <li class="main-nav__item main-nav__item--login">
-              <a class="btn btn-secondary" href="#">Login</a>
+              <a  class="btn btn-secondary" href="/login">Login</a>
             </li>
           </ul>
         </nav>
@@ -81,87 +81,8 @@
       </section>
       <section id="movies">
         <h2 class="section-title">Cinema</h2>
-        <div class="container">
-          <div class="row">
-            <div class="kenar">
-              <div class="col-3 card-container">
-                <div class="card">
-                  <img
-                    class="card-image img-fluid"
-                    src="img/poster-1.jpeg"
-                    alt=""
-                  />
-                  <div class="card-body">
-                    <h2>Star Wars</h2>
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Illum porro dolore expedita distinctio quas in.
-                    </p>
-                    <p>
-                      <button class="btn btn-primary">BUY</button>
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-3 card-container">
-                <div class="card">
-                  <img
-                    class="card-image img-fluid"
-                    src="img/ı care.jfif"
-                    alt=""
-                  />
-                  <div class="card-body">
-                    <h2>Star Wars</h2>
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Illum porro dolore expedita distinctio quas in.
-                    </p>
-                    <p>
-                      <button class="btn btn-primary">BUY</button>
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-3 card-container">
-                <div class="card">
-                  <img
-                    class="card-image img-fluid"
-                    src="img/poster-2.jpeg"
-                    alt=""
-                  />
-                  <div class="card-body">
-                    <h2>Star Wars</h2>
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Illum porro dolore expedita distinctio quas in.
-                    </p>
-                    <p>
-                      <button class="btn btn-primary">BUY</button>
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-3 card-container">
-                <div class="card">
-                  <img
-                    class="card-image img-fluid"
-                    src="img/poster-3.jpeg"
-                    alt=""
-                  />
-                  <div class="card-body">
-                    <h2>Star Wars</h2>
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Illum porro dolore expedita distinctio quas in.
-                    </p>
-                    <p>
-                      <button class="btn btn-primary">BUY</button>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div id="events-movies" class="container events-wrapper">
+          
         </div>
       </section>
       <section id="movies">
@@ -651,6 +572,9 @@
     <a href="#body" id="backtotop">
       <i class="fas fa-chevron-circle-up"></i>
     </a>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
 
